# pqc-application-test

./: .clang-format  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
configs/: benchmark_tls.toml
configs/profiles/: hybrid.toml  nist_l1.toml  nist_l3.toml  nist_l5.toml
docker/: Dockerfile.base  Dockerfile.openssl-pqc  Dockerfile.server  docker-compose.tls.yml
docker/scripts/: add_latency.sh  apply_mldsa_patch.sh  gen_certs.sh  openssl.cnf  run_tls_bench.sh  test_mldsa_tls.c
include/pqc/: pqc_benchmark.h  pqc_config.h  pqc_crypto_factory.h  pqc_kem.h  pqc_metrics.h  pqc_quic_client.h  pqc_quic_server.h  pqc_reporter.h  pqc_sig.h  pqc_timer.h  pqc_tls_client.h  pqc_tls_handshake.h  pqc_tls_server.h  pqc_types.h
src/: CMakeLists.txt
src/benchmark/: pqc_benchmark.c  pqc_metrics.c  pqc_reporter.c  pqc_timer.c
src/crypto/: pqc_crypto_factory.c
src/crypto/backends/: classic.c  oqs_kem.c  oqs_provider.c  oqs_sig.c
src/quic/: pqc_quic_client.c  pqc_quic_server.c
src/tls/: pqc_tls_client.c  pqc_tls_handshake.c  pqc_tls_server.c
src/util/: pqc_config.c
tests/: CMakeLists.txt  test_timer.c
tools/: CMakeLists.txt  pqc_bench_algo.c  pqc_bench_quic.c  pqc_bench_tls.c  pqc_full_bench.sh  pqc_list_algs.c  pqc_tls_server.c
